--- a/create_sql_database.ipynb
+++ b/create_sql_database.ipynb
@@ -53,7 +53,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "# Open up a connection\n",
+    "conn = sqlite3.connect(budgets)\n",
+    "# Initialize a cursor\n",
+    "cursor = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_name_query = \"\"\"SELECT * \n",
+    "                      FROM end_gross \n",
+    "                      ORDER BY;\"\"\"\n",
+    "\n",
+    "pd.read_sql(table_name_query, conn)"
+   ]
   }
  ],
  "metadata": {
@@ -72,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
