Netflix Data added

--- a/create_sql_database.ipynb
+++ b/create_sql_database.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-12-17T21:22:46.674739Z",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-12-17T21:23:10.522663Z",
@@ -36,7 +36,40 @@
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "imdb_title_principals table created successfully....\n",
+      "imdb_name_basic table created successfully....\n",
+      "imdb_title_crew table created successfully....\n",
+      "imdb_title_ratings table created successfully....\n",
+      "imdb_title_basics table created successfully....\n",
+      "imdb_title_akas table created successfully....\n",
+      "tn_movie_budgets table created successfully....\n",
+      "tmdb_movies table created successfully....\n",
+      "bom_movie_gross table created successfully....\n",
+      "rotten_tomatoes_critic_reviews table created successfully....\n",
+      "rotten_tomatoes_movies table created successfully....\n",
+      "=========================================================\n",
+      "Inserting data into the imdb_title_crew table....\n",
+      "Inserting data into the tmdb_movies table....\n",
+      "Inserting data into the imdb_title_akas table....\n",
+      "Inserting data into the imdb_title_ratings table....\n",
+      "Inserting data into the imdb_name_basics table....\n",
+      "Inserting data into the rotten_tomatoes_movies table....\n",
+      "Inserting data into the rotten_tomatoes_critic_reviews table....\n",
+      "Inserting data into the imdb_title_basics table....\n",
+      "Inserting data into the tn_movie_budgets table....\n",
+      "Inserting data into the bom_movie_gross table....\n",
+      "Inserting data into the imdb_title_principals table....\n",
+      "=========================================================\n",
+      "Database created successfully!\n",
+      "To connect to the database: open a connection using the path \"data/movies.db\"\n"
+     ]
+    }
+   ],
    "source": [
     "create_movies_db()"
    ]
@@ -72,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
