created df for movie data

--- a/first-notebook.ipynb
+++ b/first-notebook.ipynb
@@ -619,6 +619,171 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id   release_date  movie                     production_budget  domestic_gross  worldwide_gross  end_gross   \n",
+       "100  Sep 2, 2005   The Transporter 2         32000000.0         43095856.0      88978458.0        100074314.0    1\n",
+       "34   Apr 30, 2010  Housefull                 10100000.0         1183658.0       18726300.0        9809958.0      1\n",
+       "     Apr 5, 2019   The Best of Enemies       10000000.0         10205616.0      10205616.0        10411232.0     1\n",
+       "     Aug 13, 2010  The Expendables           82000000.0         103068524.0     268268174.0       289336698.0    1\n",
+       "     Aug 25, 2017  Birth of the Dragon       31000000.0         6901965.0       7220490.0        -16877545.0     1\n",
+       "                                                                                                                ..\n",
+       "67   Jun 15, 2005  Batman Begins             150000000.0        205343774.0     359142722.0       414486496.0    1\n",
+       "     Jun 19, 1987  The Brave Little Toaster  2300000.0          0.0             0.0              -2300000.0      1\n",
+       "     Jun 3, 1988   Big                       18000000.0         114968774.0     151668774.0       248637548.0    1\n",
+       "     Jun 7, 2013   The Purge                 3000000.0          64473115.0      91266581.0        152739696.0    1\n",
+       "1    Apr 10, 1981  Nighthawks                5000000.0          14600000.0      19600000.0        29200000.0     1\n",
+       "Length: 5782, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "budgets.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>production_budget</th>\n",
+       "      <th>domestic_gross</th>\n",
+       "      <th>worldwide_gross</th>\n",
+       "      <th>end_gross</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>5782.000000</td>\n",
+       "      <td>5.782000e+03</td>\n",
+       "      <td>5.782000e+03</td>\n",
+       "      <td>5.782000e+03</td>\n",
+       "      <td>5.782000e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>50.372363</td>\n",
+       "      <td>3.158776e+07</td>\n",
+       "      <td>4.187333e+07</td>\n",
+       "      <td>9.148746e+07</td>\n",
+       "      <td>1.017730e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>28.821076</td>\n",
+       "      <td>4.181208e+07</td>\n",
+       "      <td>6.824060e+07</td>\n",
+       "      <td>1.747200e+08</td>\n",
+       "      <td>2.108880e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.100000e+03</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>-1.574753e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>5.000000e+06</td>\n",
+       "      <td>1.429534e+06</td>\n",
+       "      <td>4.125415e+06</td>\n",
+       "      <td>-3.098222e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>1.700000e+07</td>\n",
+       "      <td>1.722594e+07</td>\n",
+       "      <td>2.798445e+07</td>\n",
+       "      <td>2.499538e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>75.000000</td>\n",
+       "      <td>4.000000e+07</td>\n",
+       "      <td>5.234866e+07</td>\n",
+       "      <td>9.764584e+07</td>\n",
+       "      <td>1.111648e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>4.250000e+08</td>\n",
+       "      <td>9.366622e+08</td>\n",
+       "      <td>2.776345e+09</td>\n",
+       "      <td>3.111853e+09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                id  production_budget  domestic_gross  worldwide_gross  \\\n",
+       "count  5782.000000       5.782000e+03    5.782000e+03     5.782000e+03   \n",
+       "mean     50.372363       3.158776e+07    4.187333e+07     9.148746e+07   \n",
+       "std      28.821076       4.181208e+07    6.824060e+07     1.747200e+08   \n",
+       "min       1.000000       1.100000e+03    0.000000e+00     0.000000e+00   \n",
+       "25%      25.000000       5.000000e+06    1.429534e+06     4.125415e+06   \n",
+       "50%      50.000000       1.700000e+07    1.722594e+07     2.798445e+07   \n",
+       "75%      75.000000       4.000000e+07    5.234866e+07     9.764584e+07   \n",
+       "max     100.000000       4.250000e+08    9.366622e+08     2.776345e+09   \n",
+       "\n",
+       "          end_gross  \n",
+       "count  5.782000e+03  \n",
+       "mean   1.017730e+08  \n",
+       "std    2.108880e+08  \n",
+       "min   -1.574753e+08  \n",
+       "25%   -3.098222e+05  \n",
+       "50%    2.499538e+07  \n",
+       "75%    1.111648e+08  \n",
+       "max    3.111853e+09  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "budgets.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
