added more to the readme file

--- a/README.md.ipynb
+++ b/README.md.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MICROSOFT MOVIE ANALYSIS"
+    "# Microsoft Film Industry and Streaming Platform Analysis"
    ]
   },
   {
@@ -47,18 +47,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": []
   },
   {
