workedon readme  more.

--- a/README.md.ipynb
+++ b/README.md.ipynb
@@ -29,32 +29,42 @@
    "metadata": {
     "hidden": true
    },
-   "source": []
+   "source": [
+    "This project will analyze what way Microsoft should join the movie industry. Microsoft sees that its competitors are creating their own film content which lead Microsoft to want to create a movie studio. Throughout this project we found data on the number of movie box tickets being sold yearly, the number of subscriptions to different streaming services yearly, the revenue that streaming services are making yearly, what movies or tv shows are on streaming services, and what movies made the most profit and if they were on streaming services or only in theatre. We have decided that Microsoft should make their own streaming service and put their movies on the streaming service.  This is because the data tells us that not as many people are going to the movies and buying tickets, but more people are subscribing to streaming services. We think Microsoft would make reap more benefits if they created their own streaming service."
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Business Problem"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
-    "Microsoft has noticed that its competitors have begun creating their own film content. So, Microsoft has decided to create a new movie studio, but they are unfamiliar with the film sector. However, the appearance of the streaming industry has altered the appeal for movie theatres. With this knowledge, should Microsoft invest in creating a movie studio or a streaming service?"
+    "Microsoft has noticed that its competitors have begun creating their own film content. So, Microsoft has decided to create a new movie studio, but they are unfamiliar with the film sector. However, the appearance of the streaming industry has altered the appeal for movie theatres. With this knowledge, should Microsoft invest in creating a movie studio or a streaming service? We want to know if people are still going to the movies or if streaming services are becoming more popular and making more money overall."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": []
   },
   {
@@ -103,7 +113,10 @@
    "metadata": {
     "hidden": true
    },
-   "source": []
+   "source": [
+    "This analysis lead to three recommendations for Microsoft.\n",
+    "1. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,23 +132,32 @@
    "metadata": {
     "hidden": true
    },
-   "source": []
+   "source": [
+    "Please review our full analysis in our Jupyter Notebook or our presentation.\n",
+    "For any additional questions please contact Mallory Wilson at mallorye1103@gmail.com, CeCe Lacey at cecelacey@gmail.com, Qiwen Ou at qwin.ou0721@gmail.com."
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Repository Structure"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": []
   }
  ],
