--- a/README.md.ipynb
+++ b/README.md.ipynb
@@ -88,8 +88,27 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "![example](images/tickets_sold.png)"
+    "![example](images/tickets_sold_year.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On average, movies that are found on streaming services make a higher gross profit than movies that are not on streaming platforms. Movies that are making a lot of money are more likely to be on streaming services.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![example](images/streaming_vs_not.png)"
    ]
   },
   {
@@ -123,16 +142,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "On average, movies that are found on streaming services make a higher gross profit than movies that are not on streaming platforms. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![example](images/streaming_vs_not.png)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
