worked a little more

--- a/README.md.ipynb
+++ b/README.md.ipynb
@@ -142,14 +142,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Successful platforms have both movies and tv shows available for streaming."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![example](images/platform_movies.png)"
+    "![example](images/moviesandtvshows.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
