--- a/README.md.mw.ipynb
+++ b/README.md.mw.ipynb
@@ -45,164 +45,216 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "For this project, we used multiple datasets in order to make our case. We found data from The Numbers which gave us information on box office ticket sales over the past years. We found a lot of data from Statista giving us information on the growth of subscriptions to streaming platforms the past few years and a dataset telling us how much money streaming services have been making by year and which movies or tv shows are on which streaming platforms. Finally, we used the create_movies_db to get information on popular movies and compare these movies to ones that are found on different streaming services. All of this data relates to the business question because it helps us be able to tell whether streaming services are becoming more popular and if ticket sales to movies shown in theatres are decreasing. "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Methods"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "This project uses descriptive analysis, looking at movie and streaming service trends over time. We went on Kaggle and Statista to find information on the streaming service industry and movie theratre trends. We then went through the data and cleaned and organized it and then decided on how we wanted to display the information. This approach was taken because in order for us to look at multiple datasets and come up with a decision for Microsoft, we needed to be able to see multiple trends over multiple years. "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "##  Results"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "The number of tickets sold hit its peak in 2002. After 2002, there is a slight decline in the number of tickets sold. Starting in 2018, there is a rapid decline and we can see that COVID impacted the number of ticket sales greatly, due to the huge decline in 2020. With as large of an impact that COVID had, it is unlikely that ticket sales will ever get as high as they used to be. "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![example](images/tickets_sold_year.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "On average, movies that are found on streaming services make a higher gross profit than movies that are not on streaming platforms. Movies that are making a lot of money are more likely to be on streaming services.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![example](images/streaming_vs_not.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "The number of people subscribing to streaming services have been and still are increasing, including Hulu, HBO, and Netflix."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![example](images/platform_subscribers.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "The revenue that streaming services are making from the increase in subscribers has been steadily increasing since 2011 and is still increasing."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![example](images/subscription_revenue.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Successful platforms have both movies and tv shows available for streaming."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![example](images/moviesandtvshows.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Conclusions"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "After analyzing all of this data, we have come up with three recommendations for Microsoft:\n",
     "1. Do not create a movie studio.\n",
@@ -214,14 +266,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## For More Information"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Please review our full analysis in our Jupyter Notebook or our presentation.\n",
     "For any additional questions please contact Mallory Wilson at mallorye1103@gmail.com, CeCe Lacey at cecelacey@gmail.com, Qiwen Ou at qwin.ou0721@gmail.com."
