--- a/CQM _Phase1_Project.ipynb
+++ b/CQM _Phase1_Project.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,6 +68,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import sqlite3 \n",
     "conn = sqlite3.connect('data/movies.db')\n",
     "# Initialize a cursor\n",
     "cursor = conn.cursor()\n",
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +184,7 @@
        "4      $317,000,000   $620,181,382  $1,316,721,747  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +386,7 @@
        "[5782 rows x 7 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +724,7 @@
        "[16744 rows x 17 columns]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1074,7 @@
        "[5158 rows x 17 columns]"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1085,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1103,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1112,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1451,7 @@
        "[988 rows x 17 columns]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1461,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1470,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1479,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1817,7 +1818,7 @@
        "[4170 rows x 17 columns]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1828,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2007,7 +2008,7 @@
        "[1016 rows x 7 columns]"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2018,7 +2019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2197,7 +2198,7 @@
        "[4766 rows x 7 columns]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2208,7 +2209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2387,7 +2388,7 @@
        "[5234 rows x 7 columns]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2399,7 +2400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2578,7 +2579,7 @@
        "[4291 rows x 7 columns]"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2590,7 +2591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2599,7 +2600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -2939,7 +2940,7 @@
        "[4241 rows x 17 columns]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2951,7 +2952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -3289,7 +3290,7 @@
        "[917 rows x 17 columns]"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3301,7 +3302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3626,7 +3627,7 @@
        "[917 rows x 17 columns]"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3638,7 +3639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3647,7 +3648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3656,14 +3657,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-139-af6d990da978>:1: SettingWithCopyWarning: \n",
+      "<ipython-input-25-af6d990da978>:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3859,7 +3860,7 @@
        "[943 rows x 8 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3871,7 +3872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3880,7 +3881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3889,7 +3890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3898,7 +3899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -4297,7 +4298,7 @@
        "[755 rows x 23 columns]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4308,7 +4309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -4319,7 +4320,7 @@
        "Name: Netflix, dtype: int64"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4330,7 +4331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -4341,7 +4342,7 @@
        "Name: Hulu, dtype: int64"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4352,7 +4353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -4363,7 +4364,7 @@
        "Name: Prime Video, dtype: int64"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4374,7 +4375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -4387,7 +4388,7 @@
        "Name: Disney+, dtype: int64"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4398,7 +4399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -4526,7 +4527,7 @@
        "4     0            0        0     1  "
       ]
      },
-     "execution_count": 148,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4538,7 +4539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4547,7 +4548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -4558,7 +4559,7 @@
        "Name: Netflix, dtype: int64"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4569,7 +4570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -4580,7 +4581,7 @@
        "Name: Hulu, dtype: int64"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4591,7 +4592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -4602,7 +4603,7 @@
        "Name: Prime Video, dtype: int64"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4613,7 +4614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -4624,7 +4625,7 @@
        "Name: Disney+, dtype: int64"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4635,7 +4636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4646,7 +4647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -4688,7 +4689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4698,7 +4699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -4707,7 +4708,7 @@
        "<BarContainer object of 2 artists>"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4739,7 +4740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
@@ -5033,7 +5034,7 @@
        "27  1995.0  1,221,696,643   $5,314,381,090      $11,190,741,247            NaN"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5045,7 +5046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5054,7 +5055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5063,7 +5064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5074,7 +5075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -5083,7 +5084,7 @@
        "Text(0, 0.5, 'Tickets Sold (in millions)')"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5116,7 +5117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -5412,7 +5413,7 @@
        "20         NaN         NaN         NaN  "
       ]
      },
-     "execution_count": 163,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5424,7 +5425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5433,7 +5434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5443,7 +5444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5452,7 +5453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5461,7 +5462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -5542,7 +5543,7 @@
        "    2016 47.91                         49                        12                              NaN"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5554,7 +5555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5563,7 +5564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5572,7 +5573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5581,7 +5582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5590,7 +5591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5599,7 +5600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5608,7 +5609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5666,7 +5667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5691,7 +5692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5771,7 +5772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -5805,7 +5806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -5848,7 +5849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -5890,7 +5891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
